--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
 <div id="container">
   <div id="header">
     <h1>Wei7</h1>
-    <a href="login.html">login</a>
+    <a href="login.html">Login</a>
+    <span id="welcome"></span>
   </div>
 
   <div id="layout">
     <div class="sidebar">
       <div class="box">
         <b>Status</b>
-        <p id="status">not logged in</p>
+        <p id="status">Not logged in</p>
       </div>
     </div>
 
