--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Anonymous Feed</title>
+  <title>Wei7</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div id="container">
   <div id="header">
-    <h1>Anonymous Feed</h1>
+    <h1>Wei7</h1>
   </div>
 
   <div class="main">
